syntax = "proto3";

package onight.zjfae.afront.gens.v2;
option java_outer_classname="TransferOrderSec";

//Generated By BrewRobot:Wed May 11 15:43:36 CST 2016

message PBIFE_trade_transferOrderSec{
	///ife/trade/transferOrderSec.html
	string isShowNotTransfer = 1;//是否需要弹框确认不可转让产品
	string isWholeTransfer =2;  //（是否整体转让：1:整体 0:拆分）
	string isShowTransferSeal=3;  //（可转让且封闭期大于5个交易日是否弹确认框  1：弹  0：不弹）
	string transferSealDays=4;   //（封闭天数
	string remainBuyAmount = 5; //,剩余可购金额,String,不校验,否,

}

message Ret_PBIFE_trade_transferOrderSec{
	///ife/trade/transferOrderSec.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_trade_transferOrderSec data=3;


}

message REQ_PBIFE_trade_transferOrderSec{
	///ife/trade/transferOrderSec.html

	string delegationCode = 1; //,委托编号,String,不校验,否,

	string buyNum = 2; //,购买份额,String,不校验,否,

	string version = 3; //,版本信息,String,不校验,否,

}